Review fixes (16 of 17; one refuted); invariant 37 covers brace globs in --include (probe 37c)